--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
     <div class="bookmarks" id="bookmarks"></div>
   </div>
   <div class="repo">
-    <h4 style="color: green;">If It is Helful , Pls Star this Project</h4>
+    <h4 style="color: green;">If It is Helpful for you, Pls Star this Project</h4>
     <a href="https://github.com/yogeshlakwal3114/GFG-Problems-BookMark">
       <button class="button-29" role="button">Go to Repo</button>
     </a>
